<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey" >

    <LinearLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".SensorActivity" >

        <!-- ###### RINGER CARD LAYOUT ###### -->

        <RelativeLayout
            android:id="@+id/ringer_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/background_light"
            android:padding="10dp" >

            <TextView
                android:id="@+id/ringer_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="5dp"
                android:text="@string/ringer_label"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/ringer_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textOff="@string/off"
                android:textOn="@string/on" />

            <TextView
                android:id="@+id/ringer_max_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/ringer_title"
                android:text="@string/in_pocket" />

            <LinearLayout
                android:id="@+id/ringer_max_linear"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ringer_max_label" >

                <SeekBar
                    android:id="@+id/ringer_seekbar_max"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="9" />

                <ImageView
                    android:id="@+id/ringer_icon_max"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/dont_care"
                    android:src="@drawable/ic_action_volume_muted" />
            </LinearLayout>

            <TextView
                android:id="@+id/ringer_min_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ringer_max_linear"
                android:text="@string/out_pocket" />

            <LinearLayout
                android:id="@+id/ringer_min_linear"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ringer_min_label" >

                <SeekBar
                    android:id="@+id/ringer_seekbar_min"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="9" />

                <ImageView
                    android:id="@+id/ringer_icon_min"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/dont_care"
                    android:src="@drawable/ic_action_volume_muted" />
            </LinearLayout>
        </RelativeLayout>

        <!-- ###### NOTIFICATION CARD LAYOUT ###### -->

        <RelativeLayout
            android:id="@+id/notification_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/background_light"
            android:padding="10dp" >

            <TextView
                android:id="@+id/notification_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="5dp"
                android:text="@string/notification_label"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/notification_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textOff="@string/off"
                android:textOn="@string/on" />

            <TextView
                android:id="@+id/notification_max_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/notification_title"
                android:text="@string/in_pocket" />

            <LinearLayout
                android:id="@+id/notification_max_linear"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/notification_max_label" >

                <SeekBar
                    android:id="@+id/notification_seekbar_max"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="9" />

                <ImageView
                    android:id="@+id/notification_icon_max"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/dont_care"
                    android:src="@drawable/ic_action_volume_muted" />
            </LinearLayout>

            <TextView
                android:id="@+id/notification_min_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/notification_max_linear"
                android:text="@string/out_pocket" />

            <LinearLayout
                android:id="@+id/notification_min_linear"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/notification_min_label" >

                <SeekBar
                    android:id="@+id/notification_seekbar_min"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="9" />

                <ImageView
                    android:id="@+id/notification_icon_min"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/dont_care"
                    android:src="@drawable/ic_action_volume_muted" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>